--- a/test/fixtures/acts_as_taggable_on/taggings.yml
+++ b/test/fixtures/acts_as_taggable_on/taggings.yml
@@ -43,10 +43,10 @@ kimura_tag_may_j_:
   context: tags
   tag: may_j_
 tagging_1:
-  taggable: article_1 (Article)
+  taggable: article1 (Article)
   context: tags
   tag: Ruby
 tagging_2:
-  taggable: article_2 (Article)
+  taggable: article2 (Article)
   context: tags
   tag: FJORD
