--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -348,3 +348,8 @@ product61:
   practice: practice46
   user: yamada
   body: 提出物の検索結果テスト用
+
+product62:
+  practice: practice5
+  user: kimura
+  body: プラクティス完了メッセージ未表示の提出物です。
