--- a/db/fixtures/reports.yml
+++ b/db/fixtures/reports.yml
@@ -247,3 +247,19 @@ report31:
   description: |-
     エレベーターピッチ難しいです。
   reported_on: <%= Time.now - 1.month - 1.day %>
+
+report32:
+  user: kensyu
+  title: "悲しい顔アイコンの日報1"
+  emotion: 1
+  description: |-
+    難しかったです
+  reported_on: "2020-11-11"
+
+report33:
+  user: kensyu
+  title: "悲しい顔アイコンの日報2"
+  emotion: 1
+  description: |-
+    やっぱり難しいです。
+  reported_on: "2020-11-13"
